# recursive_aggregation_circuit

./: Cargo.toml  proof.proof  vk.key
contract/: KeysWithPlonkVerifier.sol  PlonkCore.sol
src/circuit/: mod.rs
