[package]
name = "recursive_aggregation_circuit"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# franklin-crypto = {path = "../franklin-crypto", features = ["multicore"]}
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "plonk_gadgets", features = ["multicore"]}
sha2 = "0.9"
hex = "*"